new project, probably should put this into a new branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = public/recipething
 	url = https://github.com/dceu/recipething
 
+[submodule "public/foodholidaything"]
+	path = public/foodholidaything
+	url = https://github.com/dceu/foodholidaything.git
